# new_lifeboard

./: .env.example  .gitignore  .kilocodemodes  .pre-commit-config.yaml  CLAUDE.md  COMPREHENSIVE_TEST_IMPLEMENTATION.md  Coverage.md  FRONTEND_OPTIMIZATION_IMPLEMENTATION.md  FrontEnd_refactor.md  Gemini.md  LLM_now.md  Makefile  Overhaul.md  README.md  REFACTORING_SUMMARY.md  Smell.md  TEMPLATE_REFACTORING.md  Testing_Standards.md  clean_now.md  cli_network_diagnostics.py  data_cleaning_demo.py  debug_markdown.py  debug_ui.md  fix_tests.py  fix_ui.md  fixup.md  install_project.sh  main.py  make_complete_limitless.md  metadata_contents.md  package-lock.json  package.json  process_existing_conversations.py  progress_report.md  pyproject.toml  pytest.ini  quick_server.py  remove_test_files.py  remove_twitter_path.md  requirements.txt  (+18 more)
api/: server.py  server_backup.py  server_deprecated.py  server_old.py  server_refactored.py
config/: factory.py  models.py  settings.py  startup_validation.py  validation.py
core/: base_service.py  chunking.py  context_builder.py  database.py  database_debug.py  database_migration.py  database_pool.py  debug_logger.py  dependencies.py  dependency_container.py  embeddings.py  emotional_concepts.py  enhanced_database.py  enhanced_embeddings.py  enhanced_logging_config.py  exception_handling.py  feature_flags.py  frontend_orchestrator.py  http_client_mixin.py  ids.py  json_utils.py  logging_config.py  migrations.py  ner_service.py  orchestration.py  process_manager.py  retry_utils.py  service_interfaces.py  signal_handler.py  unified_http_client.py  vector_store.py
docs/: ENVIRONMENT_VARIABLES.md
evaluation/: embedding_benchmarks.py
frontend/: .gitignore  components.json  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
llm/: __init__.py  base.py  factory.py  ollama_provider.py  openai_provider.py
logs/: chat_service_diagnosis.py
scripts/: analyze_embedding_quality.py  debug_vector_timing.py  migrate_database.py  run_embedding_tests.py  setup_ner.py
services/: chat_service.py  clean_up_crew_service.py  debug_mixin.py  document_service.py  example_debug_service.py  ingestion.py  llm_service.py  monitor.py  namespace_prediction.py  network_diagnostics.py  network_recovery.py  news_service.py  ollama_manager.py  port_state_service.py  scheduler.py  search.py  semantic_deduplication_service.py  session_lock_manager.py  startup.py  startup_integration.py  sync_manager_service.py  sync_status_service.py  template_processor.py  text_processing_service.py  twitter_api_service.py  weather_service.py  websocket_manager.py
sources/: base.py  chunking_processor.py  limitless.py  limitless_processor.py  news.py  registry.py  semantic_deduplication_processor.py  sync_manager.py  twitter.py  twitter_processor.py  weather.py
static/: README.md  simple.html
(+288 files in other folders)
